Bug 1917867 - Simplify PresShell event dispatching asserts. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D221843